# audio_similarity

./: .gitignore  README.md  audiosim_example.py  mappings.json  pyproject.toml
.github/workflows/: docs.yml
audio_similarity/: audio_processor.py  visualization.py
docs/source/: index.rst  installation.rst
docs/source/api/: audio_processor.rst  index_factory.rst  visualization.rst
examples/: __init__.py  advanced_usage.py  basic_usage.py
saved_indices/index_20241111-094634/: index.faiss  mappings.json
tests/: test_audio_processor.py
