[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio_similarity"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "Audio similarity search using wav2vec2 and FAISS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "torch>=1.8.0",
    "torchaudio>=0.8.0",
    "transformers>=4.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pandas>=1.2.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/AnirudhPraveen/audio_similarity"
"Bug Tracker" = "https://github.com/AnirudhPraveen/audio_similarity/issues"
"Documentation" = "https://AnirudhPraveen.github.io/audio_similarity"